<resources>
    <string name="app_name">TempMail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_subtitle">Temporary Disposable Email Address</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="rate_this_app">Rate App</string>
    <string name="share_this_app">Share App</string>
    <string name="feedback_amp_bugs">Contact us</string>
    <string name="follow_us_on_instagram">Instagram</string>
    <string name="app_copyright">Temporary Disposable Email Address | Disposable email is a service that allows to receive email at a temporary address that self-destructed after a certain time elapses.</string>


    <string name="policy_privacy">Privacy Policy</string>
    <string name="title_notification">Push Notification</string>
    <string name="label_notification">Want Wallpaper Notifications from </string>
    <string name="description_subsribte">With our App , You can Enjoy ad free experiance and focus on the essential</string>
    <string name="version_label">Version</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="label_cache">Delete and Clear the Caches</string>
    <string name="msg_cache_cleared">Cache Cleared !</string>
    <string name="more_app">More Apps</string>
    <string name="privacy_policy_url">https://privacypolicies.com/privacy/view/c51c78f03631c7591d817e9d0c30c84c</string>
    <string name="developers_name">Sahil Arun</string>

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="applovin_sdk_key">x5ImfykxaMWsntpF6fuNGlFBtRML7XXXXXXXXX</string>
</resources>